--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <section id="home" class="bg-gray-900 py-40 md:py-60 text-center relative mt-8 md:mt-16">
         <div class="bg-gray-800 bg-opacity-75 rounded-lg p-8 md:p-12 mx-auto max-w-3xl relative z-10 move-up">
             <div class="container mx-auto flex flex-col items-center px-4 relative z-20">
-                <img src="./images/profile_pic.jpg" class="w-60 h-60 mb-2 md:mb-4 object-cover">
+                <img src="./images/formal_profile.jpg" class="w-60 h-60 mb-2 md:mb-4 object-cover">
                 <h1 class="text-5xl font-bold text-white">Purva Pratapwar</h1>
             </div>
             <p class="text-xl font-semibold text-white mt-2 md:mt-4 mx-4">Hey all, welcome to my portfolio!!</p>
@@ -76,7 +76,7 @@
                         <h4 class="text-xl font-bold text-gray-100 mb-4">Resume</h4>
                         <p class="text-gray-100 mb-4 mx-4"> I am looking forward to have more professional experiences.</p>
                         <p class="text-gray-100 mb-4 mx-4">Here's my resume !!</p>
-                        <a href="./images/F1_Resume.pdf" download="Resume.pdf" class="download-button">Download My Resume</a>
+                        <a href="./images/F2_Resume.pdf" download="Resume.pdf" class="download-button">Download My Resume</a>
                         <script src="script.js"></script>
                     </div>
                 </div>
